# CheckersPlayer

./: CMakeLists.txt  a.out  b1.txt  b2.txt  board.cpp  board.h  handler.cpp  handler.h  main.cpp  move.cpp  move.h  t1.txt
